# pytest-bods-fixtures

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/pytest_bods_fixtures/: __init__.py  plugin.py
tests/: test_plugin.py
