[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-bods-v04-fixtures"
version = "0.1.1"
description = "Pytest plugin providing a parametrized fixture over the canonical BODS v0.4 fixtures pack"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Stephen Abbott Pugh" }]
keywords = ["bods", "beneficial-ownership", "pytest", "fixtures", "conformance"]
classifiers = [
    "Framework :: Pytest",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "pytest>=7.0",
    "bods-v04-fixtures>=0.1.1,<0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/StephenAbbott/pytest-bods-fixtures"
Issues = "https://github.com/StephenAbbott/pytest-bods-fixtures/issues"
PyPI = "https://pypi.org/project/pytest-bods-v04-fixtures/"
Changelog = "https://github.com/StephenAbbott/pytest-bods-fixtures/blob/main/CHANGELOG.md"
"Fixture pack (source)" = "https://github.com/StephenAbbott/bods-fixtures"
"Fixture pack (PyPI)" = "https://pypi.org/project/bods-v04-fixtures/"

# Pytest entry point — registers the plugin with pytest at install time
# so users only need `pip install pytest-bods-v04-fixtures`.
[project.entry-points.pytest11]
bods_fixtures = "pytest_bods_fixtures.plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
